--- a/summertask1.ipynb
+++ b/summertask1.ipynb
@@ -7,13 +7,178 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.datasets import fetch_california_housing\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "505cfeb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = fetch_california_housing(as_frame=True)\n",
+    "df = data.frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9152a59b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 20640 entries, 0 to 20639\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   MedInc       20640 non-null  float64\n",
+      " 1   HouseAge     20640 non-null  float64\n",
+      " 2   AveRooms     20640 non-null  float64\n",
+      " 3   AveBedrms    20640 non-null  float64\n",
+      " 4   Population   20640 non-null  float64\n",
+      " 5   AveOccup     20640 non-null  float64\n",
+      " 6   Latitude     20640 non-null  float64\n",
+      " 7   Longitude    20640 non-null  float64\n",
+      " 8   MedHouseVal  20640 non-null  float64\n",
+      "dtypes: float64(9)\n",
+      "memory usage: 1.4 MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "53921ce4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             MedInc      HouseAge      AveRooms     AveBedrms    Population  \\\n",
+      "count  20640.000000  20640.000000  20640.000000  20640.000000  20640.000000   \n",
+      "mean       3.870671     28.639486      5.429000      1.096675   1425.476744   \n",
+      "std        1.899822     12.585558      2.474173      0.473911   1132.462122   \n",
+      "min        0.499900      1.000000      0.846154      0.333333      3.000000   \n",
+      "25%        2.563400     18.000000      4.440716      1.006079    787.000000   \n",
+      "50%        3.534800     29.000000      5.229129      1.048780   1166.000000   \n",
+      "75%        4.743250     37.000000      6.052381      1.099526   1725.000000   \n",
+      "max       15.000100     52.000000    141.909091     34.066667  35682.000000   \n",
+      "\n",
+      "           AveOccup      Latitude     Longitude   MedHouseVal  \n",
+      "count  20640.000000  20640.000000  20640.000000  20640.000000  \n",
+      "mean       3.070655     35.631861   -119.569704      2.068558  \n",
+      "std       10.386050      2.135952      2.003532      1.153956  \n",
+      "min        0.692308     32.540000   -124.350000      0.149990  \n",
+      "25%        2.429741     33.930000   -121.800000      1.196000  \n",
+      "50%        2.818116     34.260000   -118.490000      1.797000  \n",
+      "75%        3.282261     37.710000   -118.010000      2.647250  \n",
+      "max     1243.333333     41.950000   -114.310000      5.000010  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1bc382d",
+   "metadata": {},
+   "source": [
+    "Problem 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c2cf4fa2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             MedInc\n",
+      "count  20640.000000\n",
+      "mean       3.870671\n",
+      "std        1.899822\n",
+      "min        0.499900\n",
+      "25%        2.563400\n",
+      "50%        3.534800\n",
+      "75%        4.743250\n",
+      "max       15.000100\n"
+     ]
+    }
+   ],
+   "source": [
+    "med_income = df[['MedInc']]\n",
+    "print(med_income.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8e6f8410",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Population  Latitude\n",
+      "0       322.0     37.88\n",
+      "1      2401.0     37.86\n",
+      "2       496.0     37.85\n",
+      "3       558.0     37.85\n",
+      "4       565.0     37.85\n"
+     ]
+    }
+   ],
+   "source": [
+    "pop_lat = df[['Population', 'Latitude']]\n",
+    "print(pop_lat.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "20b903ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   HouseAge  AveBedrms  Latitude\n",
+      "0      41.0   1.023810     37.88\n",
+      "1      21.0   0.971880     37.86\n",
+      "2      52.0   1.073446     37.85\n",
+      "3      52.0   1.073059     37.85\n",
+      "4      52.0   1.081081     37.85\n"
+     ]
+    }
+   ],
+   "source": [
+    "house_lat = df[['HouseAge', 'AveBedrms', 'Latitude']]\n",
+    "print(house_lat.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7b1b0f5",
    "metadata": {},
    "outputs": [],
    "source": []
