--- a/HCAI5DS02_PUSKAR_pre-requisite.ipynb
+++ b/HCAI5DS02_PUSKAR_pre-requisite.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9152a59b",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "print(df.info())"
+    "print(df.info())\n"
    ]
   },
   {
